fix: fix align for side-filters checkbox

--- a/src/DataTable/index.scss
+++ b/src/DataTable/index.scss
@@ -112,6 +112,12 @@
       display: flex;
       justify-content: flex-end;
     }
+
+    .pgn__data-table-side-filters-item {
+      .pgn__form-checkbox {
+        align-items: center;
+      }
+    }
   }
 
   .pgn__data-table-layout-main {
